<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <!-- The navigation   -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:background="@color/navigation_color"
        android:orientation="vertical">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dashboard_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/selector_button"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/dashboard"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size_1dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:background="@color/dark_blue_line"
                    android:elevation="@dimen/elevation_1dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/selector_button"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/my_profile"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size_1dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:background="@color/dark_blue_line"
                    android:elevation="@dimen/elevation_1dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/settings"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size_1dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:background="@color/dark_blue_line"
                    android:elevation="@dimen/elevation_1dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/contact_us"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size_1dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:background="@color/dark_blue_line"
                    android:elevation="@dimen/elevation_1dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/rate_us"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size_1dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:background="@color/dark_blue_line"
                    android:elevation="@dimen/elevation_1dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/share"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size_1dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:background="@color/dark_blue_line"
                    android:elevation="@dimen/elevation_1dp" />

                <RelativeLayout
                    android:id="@+id/logout_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/margin_18dp"
                        android:text="@string/logout"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
