<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp"
    android:weightSum="2"
    tools:context="com.innovative.housingsecurity.ui.activities.ScannerInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginStart="@dimen/margin_12dp"
                android:layout_toRightOf="@+id/iv_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/address"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/item_selector" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4">

        <TextView
            android:id="@+id/tv_visitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"
            android:maxLines="1"
            android:padding="@dimen/padding_10dp"
            android:text="@string/visitor"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_visitor"
            android:layout_marginTop="20dp"
            android:gravity="top|left">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_visitor_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginStart="@dimen/margin_12dp"
                android:layout_toRightOf="@+id/iv_visitor_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_visitor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_total_guests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/total_guests"
                    android:textColor="@color/black" />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
